Fix mobile thinnness causing no visibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,7 +33,7 @@
 }
 @supports (font-variation-settings: normal) {
   :root {
-    font-family: "Inter var", sans-serif;
+    font-family: "Inter", sans-serif;
   }
 }
 
